Fixing background now showing on iPhone devices

--- a/static/style.css
+++ b/static/style.css
@@ -95,7 +95,7 @@ video {
   position: fixed;
   top: 0%;
   left: 0%;
-  z-index: -10;
+  z-index: -1;
   width: 100vw;
   height: 100vh;
   object-fit: cover;
